# Agri_ais_project

./: CMakeLists.txt  README.md  package.xml
data/: 1535634489692060240_small.txt  1535635757393294982_plants.txt  1535635761941033_curvature.txt  1535635761941033_intensity.txt  1535635781568669803_plants.txt  1535635817097713.txt  1535635817097713_curvature.txt  1535635817097713_intensity.txt  1535635817097713_new.txt  1535635817097713_x.txt  1535635817097713_y.txt  1535635819847282.txt  frames.gv  ransac_node_old.txt
data/old_Data/: 1535635817392096375.txt
data/pcl_text/: 1535634489695269178_small_plants.txt  1535635757392261781.txt  1535635781571793877.txt  1535635817097713.txt
include/myproject1/: pcl_coloriser.h  pcl_integrator.h  pcl_segmentor.h
launch/: bag_player.launch  colored_pcl.launch  colored_pcl_bag.launch  integrated_pcl_bag.launch  integrated_point_cloud.launch  largeplants_bag.launch  largeplants_bag_img.launch  largeplants_bag_static_tf.launch  largeplants_featurizeToFullPCl.launch  pcd_viewer_rviz.launch  pcl_classifier.launch  pcl_coloriser.launch  pcl_featurizer.launch  pcl_integrator.launch  pcl_integrator_offline.launch  pcl_segmentor.launch  play_integrated_pcl.launch  play_ros_bag.launch  proc_blackfly_raw.launch  record_bag.launch  segment.launch  segmentation.launch  smallplants_bag.launch  smallplants_bag_img.launch  smallplants_featurizeToFullPCl.launch
scripts/: pclClassifier.py  pcl_get_labels.py  plot.py  props.py  props_full.py
scripts/wandb/: latest-run
scripts/wandb/run-20201105_225652-3fu29vp6/: run-3fu29vp6.wandb
scripts/wandb/run-20201105_225652-3fu29vp6/files/: requirements.txt  wandb-metadata.json
scripts/wandb/run-20201105_230002-3rgq7ruu/: run-3rgq7ruu.wandb
scripts/wandb/run-20201105_230002-3rgq7ruu/files/: config.yaml  wandb-metadata.json
scripts/wandb/run-20201105_230102-1lgutyng/: run-1lgutyng.wandb
scripts/wandb/run-20201105_230102-1lgutyng/files/: config.yaml  wandb-metadata.json  wandb-summary.json
scripts/wandb/run-20201105_230102-1lgutyng/files/media/table/: calibration_curve_4_2460c49a.table.json  class_proportions_3_b2f76a7e.table.json  confusion_matrix_1_6fdbc490.table.json  learning_curve_0_0d423409.table.json  precision_recall_6_4920971f.table.json  roc_5_2dda336c.table.json  summary_metrics_2_9ff74497.table.json
scripts/wandb/run-20201106_113600-zcotm207/: run-zcotm207.wandb
scripts/wandb/run-20201106_113600-zcotm207/files/: requirements.txt  wandb-metadata.json
scripts/wandb/run-20201106_113706-2j0n7ea4/: run-2j0n7ea4.wandb
scripts/wandb/run-20201106_113706-2j0n7ea4/files/: wandb-metadata.json
src/: myproject1_node.cpp  pcl_colored_node.cpp  pcl_coloriser.cpp  pcl_coloriser_node.cpp  pcl_featurizer_node.cpp  pcl_from_labels.cpp  pcl_integrator.cpp  pcl_integrator.h  pcl_integrator_node.cpp  pcl_integrator_node_offline.cpp  pcl_segmentor.cpp  pcl_segmentor_node.cpp  plot.py  ransac_node.cpp  segmentation_node.cpp  test.cpp  transform1_node.cpp  window.cpp  window.h  window.hpp
